added styles and colors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>CSS Graphic</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="big-text">
+        CSS = Styles <br />
+        and Colors
+      </div>
+      <div class="blue-rectangle"></div>
+      <div class="green-rectangle"></div>
+      <div class="orange-border"></div>
+      <div class="manipulate-text">
+        M a n i p u l a t e<br />
+        T e x t
+      </div>
+      <div class="colors">C o l o r s ,</div>
+      <div class="purple-rectangle"></div>
+      <div class="boxes">B o x e s</div>
+    </div>
+  </body>
 </html>
